# melonDS-switch-upscale

./: .gitignore  .gitmodules  README.md  build_script.sh
.github/: FUNDING.yml
src/: DSi_SPI_TSC.cpp  GPU2D_Deko.cpp  GPU2D_Deko.h  GPU3D_Deko.cpp  GPU3D_Deko.h  Savestate.cpp  Savestate.h
src/frontend/: FrontendUtil.h  Util_ROM.cpp
src/frontend/switch/: BackButton.cpp  CMakeLists.txt  Filebrowser.cpp  Gfx.cpp  Gfx.h  InputConfig.cpp  InputConfig.h  Localization.cpp  Localization.h  NotificationSystem.cpp  NotificationSystem.h  PlatformConfig.cpp  PlatformConfig.h  RATracker.cpp  RATracker.h  ROMMetaDatabase.cpp  ROMMetaDatabase.h  RetroAchievements.cpp  RetroAchievements.h  ScreenSharp_fsh.glsl  SettingsDialog.cpp  StartMenu.cpp  TriggerNotification.cpp  TriggerNotification.h  main.cpp  main.h  version.h
src/frontend/switch/mm_vec/: mm_vec.h
src/shaders/: BGAffine_fsh.glsl  BGText_fsh.glsl  ComposeBGOBJ_fsh.glsl  GPU3D_Comp.glsl  OBJMosaicX_fsh.glsl  OBJ_fsh.glsl  OBJ_vsh.glsl
